fix problem link

--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
           </div>
           <div class="burger__menu--link">
             <ul class="burger__menu--list">
-              <li class="burger__menu--item"><a href="../resources/catalog.html">Каталог</a></li>
+              <li class="burger__menu--item"><a href="./resources/catalog.html">Каталог</a></li>
               <li class="burger__menu--item"><a href="#">Магазины</a></li>
               <li class="burger__menu--item"><a href="#">Шоу-рум</a></li>
               <li class="burger__menu--item"><a href="#">Доставка и оплата</a></li>
               <li class="burger__menu--item"><a href="#">Дисконт</a></li>
-              <li class="burger__menu--item"><a href="../resources/contacts.html">Контакты</a></li>
+              <li class="burger__menu--item"><a href="./resources/contacts.html">Контакты</a></li>
             </ul>
             <div class="burger__menu--img">
               <svg width="161" height="112">
@@ -291,7 +291,7 @@
             <nav class="header__down-nav">
               <ul class="header__down-nav--list">
                 <li class="header__down-nav--item">
-                  <a class="header__down-nav--link" href="../resources/catalog.html">Каталог</a>
+                  <a class="header__down-nav--link" href="./resources/catalog.html">Каталог</a>
                 </li>
                 <li class="header__down-nav--item">
                   <a class="header__down-nav--link" href="">Магазины</a>
@@ -306,7 +306,7 @@
                   <a class="header__down-nav--link" href="">Дисконт</a>
                 </li>
                 <li class="header__down-nav--item">
-                  <a class="header__down-nav--link" href="../resources/contacts.html">Контакты</a>
+                  <a class="header__down-nav--link" href="./resources/contacts.html">Контакты</a>
                 </li>
               </ul>
             </nav>
@@ -467,7 +467,7 @@
                   <p class="sale__card-price--disc">15 990 руб</p>
                   <p class="sale__card-price--item">24 990 руб</p>
                 </div>
-                <a href="../resources/card-product.html" class="sale__card-btn">Купить</a>
+                <a href="./resources/card-product.html" class="sale__card-btn">Купить</a>
               </div>
             </div>
           </div>
@@ -486,7 +486,7 @@
                     <p class="sale__card-price--disc">22 990 руб</p>
                     <p class="sale__card-price--item">32 990 руб</p>
                   </div>
-                  <a href="../resources/card-product.html" class="sale__card-btn">Купить</a>
+                  <a href="./resources/card-product.html" class="sale__card-btn">Купить</a>
                 </div>
                 <div class="sale__card-img">
                   <div class="sale__card-bg2"></div>
@@ -505,7 +505,7 @@
                   <p class="sale__card-price--disc">1 290 руб</p>
                   <p class="sale__card-price--item">1 890 руб</p>
                 </div>
-                <a href="../resources/card-product.html" class="sale__card-btn">Купить</a>
+                <a href="./resources/card-product.html" class="sale__card-btn">Купить</a>
               </div>
             </div>
           </div>
@@ -520,7 +520,7 @@
                   <p class="sale__card-price--disc">690 руб</p>
                   <p class="sale__card-price--item">990 руб</p>
                 </div>
-                <a href="../resources/card-product.html" class="sale__card-btn">Купить</a>
+                <a href="./resources/card-product.html" class="sale__card-btn">Купить</a>
               </div>
             </div>
           </div>
@@ -555,7 +555,7 @@
                   <p class="sale__card-price--disc">1 390 руб</p>
                   <p class="sale__card-price--item">2 090 руб</p>
                 </div>
-                <a href="../resources/card-product.html" class="sale__card-btn">Купить</a>
+                <a href="./resources/card-product.html" class="sale__card-btn">Купить</a>
               </div>
             </div>
           </div>
@@ -584,7 +584,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head">Диван кожаный “R-94”</h3>
               <p class="wrapper__item-price">94 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -601,7 +601,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head1">Диван апартековый “T-75”</h3>
               <p class="wrapper__item-price">69 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -616,7 +616,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head">Диван тканевый “D-31”</h3>
               <p class="wrapper__item-price">28 490 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -631,7 +631,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head1">Диван велюровый “Y-68”</h3>
               <p class="wrapper__item-price">22 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -646,7 +646,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head1">Диван из&nbsp;шинила “W-95”</h3>
               <p class="wrapper__item-price">22 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -661,7 +661,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head1">Диван флоковый “G-41”</h3>
               <p class="wrapper__item-price">17 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -676,7 +676,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head1">Диван шиниловый “V-43”</h3>
               <p class="wrapper__item-price">19 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -691,7 +691,7 @@
             <div class="wrapper__item">
               <h3 class="wrapper__item--head1">Диван велюровый “S-99”</h3>
               <p class="wrapper__item-price">19 990 руб</p>
-              <a href="../resources/card-product.html" class="wrapper__item-btn">Купить</a>
+              <a href="./resources/card-product.html" class="wrapper__item-btn">Купить</a>
             </div>
           </li>
 
@@ -1223,12 +1223,12 @@
           <li class="footer__content-item">Сборка и установка</li>
         </ul>
         <ul class="footer__content-list footer__content-list3">
-          <li class="footer__content-title"><a href="../resources/contacts.html">Связь с нами</a></li>
+          <li class="footer__content-title"><a href="./resources/contacts.html">Связь с нами</a></li>
           <li class="footer__content-item">Обратная связь</li>
           <li class="footer__content-item">Контакты</li>
         </ul>
         <ul class="footer__content-list footer__content-list4">
-          <li class="footer__content-title"><a href="../resources/cooperation.html">Сотрудничество</a></li>
+          <li class="footer__content-title"><a href="./resources/cooperation.html">Сотрудничество</a></li>
           <li class="footer__content-item">Поставщикам</li>
           <li class="footer__content-item">Оптовикам</li>
           <li class="footer__content-item">Карьера</li>
